# m7engine

./: CMakeLists.txt  COPYING  README.md  m7engine.sln  m7engine_vsbuild.sln
m7engine/: CollisionManager.cpp  CollisionManager.h  ConfigReader.cpp  ConfigReader.h  Console.cpp  Console.h  Entity.cpp  Entity.h  Font.cpp  Font.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  M7engine.cpp  M7engine.h  ParticleEmitter.cpp  ParticleEmitter.h  Primitives.cpp  Primitives.h  ResourceManager.cpp  ResourceManager.h  SoundManager.cpp  SoundManager.h  Sprite.cpp  Sprite.h  Vector2.cpp  Vector2.h  m7engine.vcxproj  m7engine.vcxproj.filters  main.cpp
m7engine_vsbuild/: CollisionManager.cpp  CollisionManager.h  ConfigReader.cpp  ConfigReader.h  Entity.cpp  Entity.h  Font.cpp  Font.h  InputManager.cpp  InputManager.h  M7engine.cpp  M7engine.h  ParticleEmitter.cpp  ParticleEmitter.h  Primitives.cpp  Primitives.h  SoundManager.cpp  SoundManager.h  Sprite.cpp  Sprite.h  Vector2.cpp  Vector2.h  config.ini  m7engine_vsbuild.vcxproj  m7engine_vsbuild.vcxproj.filters  main.cpp
resources/: config.ini  objects.ini  resources.ini  test.map  widget.ini
src/: CMakeLists.txt  Collision.cpp  Collision.h  CommonDialogs.cpp  CommonDialogs.h  ConfigReader.cpp  ConfigReader.h  Console.cpp  Console.h  Enemies.cpp  Enemies.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Input.cpp  Input.h  InputKeyDefinitions.h  Interface.cpp  Interface.h  Items.cpp  Items.h  Level.cpp  Level.h  LevelEditor.cpp  LevelEditor.h  Logger.cpp  Logger.h  M7engine.cpp  M7engine.h  Player.cpp  Player.h  Primitives.cpp  Primitives.h  Props.cpp  Props.h  ResourceManager.cpp  ResourceManager.h  Sound.cpp  Sound.h  (+13 more)
src/engine/: Collision.cpp  Collision.h  ConfigReader.h  Console.cpp  Console.h  Entity.h  Input.cpp  Input.h  InputKeyDefinitions.h  Logger.h  M7engine.cpp  M7engine.h  Primitives.h  ResourceManager.h  Sound.h  Sprite.cpp  Sprite.h  Text.h  Timer.cpp  Timer.h  Utilities.cpp  Utilities.h  Vector2.cpp  Vector2.h  Widget.cpp  Widget.h  Window.cpp  Window.h
(+2 files in other folders)
